# TritonCTF

./: CMakeLists.txt  README.md  shell.nix
includes/TritonCTF/: executor.hpp  project.hpp
src/: executor.cpp  project.cpp
